musica (2.9) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 01 Oct 2010 11:29:03 -0700

musica (2.8-0ubuntu1) natty; urgency=low

  * index.php: constrain the size of the album art (some are too big)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 01 Oct 2010 11:28:29 -0700

musica (2.7-0ubuntu1) maverick; urgency=low

  * jplayer.php, jplayer/js/jquery.min.js: embed local copy of this,
    for offline use
  * debian/control, debian/dirs, debian/postinst, index.php: display
    album art embedded in id3v2 tags; currently shelling out to use
    eyeD3 utility; when php's libraries catch up, this should be deprecated
  * jplayer.php: don't autoplay, per pgraner/jfo request
  * index.php, jplayer.php: add a "pop-out" functionality, for popping the
    music player out to a new window/tab; try to get player more centered
  * debian/install, index.php, popout.png: add popout icon

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 25 Sep 2010 11:23:44 -0700

musica (2.6-0ubuntu1) maverick; urgency=low

  * index.php: support nested album directories, LP: #640821

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 16 Sep 2010 14:11:19 -0700

musica (2.5-0ubuntu1) maverick; urgency=low

  * debian/install, favicon.ico, index.php: add a favicon.ico, LP: #622289
  * favicon.ico: stylize the musical note to look like an "M"

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 24 Aug 2010 15:11:07 -0400

musica (2.4-0ubuntu1) maverick; urgency=low

  * index.php: fix problem where songs or albums have two '.' in their
    name

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 15 Jun 2010 10:59:40 -0500

musica (2.3-0ubuntu1) maverick; urgency=low

  * jplayer.php: start playing on page load
  * index.php: move the "about" text to a single link, and a page of its
    own, creates more vertical space

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 01 Jun 2010 09:09:13 -0500

musica (2.2-0ubuntu1) maverick; urgency=low
